overflow-x fixed on body

--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,7 @@ body{
   align-items: center;
   justify-content: center;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 html{
